force-app/main/default/objects/Apttus_Config2__Order__c/fields/Apttus_Config2__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CompletedDate__c</fullName>
    <description>The date when the order is closed. The order is completed on this date.</description>
    <inlineHelpText>The date when the order is closed. The order is completed on this date.</inlineHelpText>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>