force-app/main/default/objects/Apttus_Config2__Order__c/fields/Apttus_Config2__Source__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Source__c</fullName>
    <description>The order source</description>
    <inlineHelpText>The order source</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>