force-app/main/default/objects/Apttus_Config2__Order__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The type of order</description>
    <inlineHelpText>The type of order</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill Only Service</fullName>
            </value>
            <value>
                <fullName>Credit Memo Request</fullName>
            </value>
            <value>
                <fullName>Custom Order</fullName>
            </value>
            <value>
                <fullName>Debit Memo Request</fullName>
            </value>
            <value>
                <fullName>Spare Debit Memo Req</fullName>
            </value>
            <value>
                <fullName>Free of Charge</fullName>
            </value>
            <value>
                <fullName>Internal Order</fullName>
            </value>
            <value>
                <fullName>Standard Order</fullName>
            </value>
            <value>
                <fullName>Illumina Returns</fullName>
            </value>
            <value>
                <fullName>Rush Order</fullName>
            </value>
            <value>
                <fullName>Spare &amp; Labor Order</fullName>
            </value>
            <value>
                <fullName>Spares Returns</fullName>
            </value>
            <value>
                <fullName>BaseSpValue Contract</fullName>
            </value>
            <value>
                <fullName>Value Contract</fullName>
            </value>
            <value>
                <fullName>Illmna Base Warranty</fullName>
            </value>
            <value>
                <fullName>Illmn Extnded Wrrnty</fullName>
            </value>
            <value>
                <fullName>Illmn Prof Svcs</fullName>
            </value>
            <value>
                <fullName>Illmn Rental Contrct</fullName>
            </value>
            <value>
                <fullName>Illmn S/W Contract</fullName>
            </value>
            <value>
                <fullName>Illmn Servc Contract</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>