force-app/main/default/objects/Apttus_Config2__Order__c/fields/Apttus_Config2_SoldToAccountId_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2_SoldToAccountId_ERP_Id__c</fullName>
    <description>Sold to Account ERP Id</description>
    <label>Sold To ERP Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>