force-app/main/default/objects/Apttus_Config2__Order__c/fields/ASOP_Number__c.field-meta.xml
<CustomField>
    <fullName>ASOP_Number__c</fullName>
    <description>Field to store ASOP number</description>
    <externalId>true</externalId>
    <label>ASOP Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>