force-app/main/default/objects/Apttus_Config2__Order__c/fields/ASOP_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>ASOP_Number_Link__c</fullName>
    <description>ASOP number link</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASOP Number Link</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Orders (ASOP Number Link)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>