force-app/main/default/objects/Apttus_Config2__Order__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <description>Bill to customer master data</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Customer_Master_Data__c</referenceTo>
    <relationshipLabel>Order(Bill To)</relationshipLabel>
    <relationshipName>ApttusOrder</relationshipName>
    <type>Lookup</type>
</CustomField>