force-app/main/default/objects/Apttus_Config2__Order__c/fields/Bill_To_Account_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_ERP_Id__c</fullName>
    <description>Bill to ERP Id</description>
    <label>Bill To Account ERP Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>