force-app/main/default/objects/Apttus_Config2__Order__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Field to populate contact email id</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>