force-app/main/default/objects/Apttus_Config2__Order__c/fields/Inco_Term_1_SAP__c.field-meta.xml
<CustomField>
    <fullName>Inco_Term_1_SAP__c</fullName>
    <description>Field to store SAP Inco term 1</description>
    <label>Inco Term 1 SAP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>