force-app/main/default/objects/Apttus_Config2__Order__c/fields/Order_Line_Not_Activated__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Not_Activated__c</fullName>
    <description>Checking Order line item not activated under Order</description>
    <label>Order Line Not Activated</label>
    <summaryFilterItems>
        <field>Apttus_Config2__OrderLineItem__c.Apttus_Config2__Status__c</field>
        <operation>notEqual</operation>
        <value>Activated</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__OrderLineItem__c.Apttus_Config2__OrderId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>