force-app/main/default/objects/Apttus_Config2__Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Field store order Status</description>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>