force-app/main/default/objects/Apttus_Config2__Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Field to store payment Terms</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>End of Month Net 30</fullName>
            </value>
            <value>
                <fullName>End of Month Net 45</fullName>
            </value>
            <value>
                <fullName>End of Month Net 50</fullName>
            </value>
            <value>
                <fullName>End of Month Net 60</fullName>
            </value>
            <value>
                <fullName>End of Month Net 90</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 15 D+M18ays</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 50 Days</fullName>
            </value>
            <value>
                <fullName>Net 55 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
            <value>
                <fullName>Net 90 Days</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>