force-app/main/default/objects/Apttus_Config2__Order__c/fields/Payment_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Description__c</fullName>
    <description>Description for Pament terms</description>
    <label>Payment Terms Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>