force-app/main/default/objects/Apttus_Config2__Order__c/fields/ProcessedBySystem__c.field-meta.xml
<CustomField>
    <fullName>ProcessedBySystem__c</fullName>
    <description>Flag to check Is processed by system</description>
    <defaultValue>false</defaultValue>
    <label>ProcessedBySystem</label>
    <type>Checkbox</type>
</CustomField>