force-app/main/default/objects/Apttus_Config2__Order__c/fields/Sales_Order_Number_Unique__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number_Unique__c</fullName>
    <description>This is a shadow field for Sales Order Number</description>
    <externalId>true</externalId>
    <label>Sales Order Number Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>