force-app/main/default/objects/Apttus_Config2__Order__c/fields/Total_Discount_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_USD__c</fullName>
    <description>Field to store Discount in USD</description>
    <label>Total Discount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>