force-app/main/default/objects/Apttus_Config2__Order__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>Field to store Ultimate Consignee</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>