force-app/main/default/objects/Apttus_Config2__Order__c/fields/Ultimate_Consignee_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_ERP_Id__c</fullName>
    <description>Ultimate consignee ERP Id</description>
    <label>Ultimate Consignee ERP Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>