force-app/main/default/objects/Apttus_Config2__Order__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__OrderDate__c</columns>
    <columns>Apttus_Config2__OrderEndDate__c</columns>
    <columns>Apttus_Config2__OrderStartDate__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Sales_Order_Number_Unique__c</columns>
    <columns>ASOP_Number__c</columns>
    <columns>Apttus_Config2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>