force-app/main/default/objects/Apttus_Config2__Order__c/listViews/Software_Orders.listView-meta.xml
<ListView>
    <fullName>Software_Orders</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__SoldToAccountId__c</columns>
    <columns>Ultimate_Consignee__c</columns>
    <columns>Apttus_Config2__ShipToAccountId__c</columns>
    <columns>Apttus_Config2__CompletedDate__c</columns>
    <columns>Distributor__c</columns>
    <columns>Apttus_Config2__OrderDate__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Config2__Type__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </filters>
    <label>Software Orders</label>
</ListView>